--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 </head>
 <body>
     <div>
-
         <input type="text" name="km" id="km" placeholder="Inserisci i km del tragitto">
 
         <select name="age" id="age">
@@ -17,9 +16,10 @@
             <option value="2">Over 65</option>
         </select>
 
-        <button>Genera</button>
-
+        <button id="btn-calc">Genera</button>
     </div>
+
+    <h1 id="message"></h1>
 
 
     <script src="./app.js"></script>
