--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
                 <option value="1">Under 18</option>
                 <option value="2">Over 65</option>
             </select>
-            <button class="card-button" id="btn-calc">Genera</button>
+            <div class="card-button-cell">
+                <button class="card-button" id="btn-calc">Genera</button>
+                <button class="card-button">Annulla</button>
+            </div>
         </div>
 
 
