Add - css 2nd section (in progress)

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
     <div class="container-lg">
         <h1 class="title">CALCOLA IL PREZZO DEL TUO BIGLIETTO</h1>
-        <div class="container">
-            <h3 class="card-title1">Nome Cognome</h3>
-            <h3 class="card-title2">Km da percorrere</h3>
-            <h3 class="card-title3">Fascia d'età</h3>
+        <div class="container container-grid-1">
+            <h4 class="card-title1">Nome Cognome</h4>
+            <h4 class="card-title2">Km da percorrere</h4>
+            <h4 class="card-title3">Fascia d'età</h4>
             <input class="card-input1" type="text" placeholder="Inserisci nome e cognome">
             <input class="card-input2" type="text" name="km" id="km" placeholder="Inserisci i km del tragitto">
             <select class="card-input3" name="age" id="age">
@@ -28,7 +28,13 @@
 
 
         <h1 class="title">IL TUO BIGLIETTO</h1>
-        <div class="container">
+        <div class="container container-grid-2">
+            <h2 class="container-title">DETTAGLIO PASSEGGERI</h2>
+            <h3 class="card-title1-1">NOME PASSEGGERO</h4>
+            <h4 class="card-title2-1">Offerta</h4>
+            <h4 class="card-title3-1">Carrozza</h4>
+            <h4 class="card-title4-1">Codice CP</h4>
+            <h4 class="card-title5-1">Costo biglietto</h4>
 
         </div>
     </div>    
